fixing the scrollbar color for firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,8 @@ video {
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
+  scrollbar-color: #b45f06 transparent;
+  scrollbar-width: thin;
 }
 /* HTML5 display-role reset for older browsers */
 article,
